# CPlusWork

./: CMakeLists.txt  FirstDemo  file
cpp/: FunMysql.cpp  HXLMysql.cpp  app_mysql.cpp  fun.cpp  main.cpp
head/: FunMysql.h  HXLMysql.h  app_mysql.h  funHead.h
sql_query/: cd_insert.sql  cd_table.sql  children_insert.sql  fname_create.sql  user_add.sql
